# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
+import { sendMail, renderMailHtml } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 
 export interface User{
     fullName: string;
@@ -10,6 +12,7 @@ export interface User{
     profilePicture: string;
     isActive: boolean;
     activationCode: string
+    createdAt?: string
 
 }
 
@@ -22,11 +25,13 @@ const userSchema = new Schema<User>({
     },
     username: {
         type: Schema.Types.String,
-        required: true
+        required: true,
+        unique: true
     },
     email: {
         type: Schema.Types.String,
-        required: true
+        required: true,
+        unique: true
     },
     password: {
         type: Schema.Types.String,
@@ -54,7 +59,36 @@ const userSchema = new Schema<User>({
 userSchema.pre("save", function(next) {
     const user = this;
     user.password = encrypt(user.password);
+    user.activationCode = encrypt(user.id)
     next()
+})
+
+userSchema.post("save", async function (doc, next){
+    try {
+        const user = doc;
+
+        console.log("Send email to:", user.email)
+
+        const contentMail = await renderMailHtml('registration-success.ejs', {
+            username: user.username,
+            fullName: user.fullName,
+            email: user.email,
+            createdAt: user.createdAt,
+            activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`
+        })
+
+        await sendMail({
+            from: EMAIL_SMTP_USER,
+            to: user.email,
+            subject: "Aktivasi Akun Anda",
+            html: contentMail
+        })
+    } catch (error) {
+        console.log("error:", error)
+    } finally {
+        next()
+    }
+
 })
 
 // delete password before it retrieved in login process
